<resources>
  <string name="app_name">Story Line</string>
  <string name="activity_startup_title">StartupActivity</string>
  <string name="activity_sources_browser_title">BrowserActivity</string>
  <string name="activity_startup_description">Новостное приложение \"Story Line\"</string>
  <string name="activity_preferences_title">Настройки</string>
  <string name="categories_browser_category_sources_title">Источники</string>
  <string name="categories_browser_category_settings_title">Настройки</string>
  <string name="categories_browser_category_about_title">О приложении</string>
  <string name="activity_news_browser_title">Просмотр новости</string>
  <string name="menu_item_settings">Настройки</string>
  <string name="menu_item_sources">Источники</string>
  <string name="preferences_category_update_title">Обновление</string>
  <string name="preferences_category_notification_title">Уведомления</string>
  <string name="preferences_category_sources_title">Источники данных</string>
  <string name="preferences_category_presentation_title">Оформление</string>
  <string name="preferences_screen_sources_title">Источники данных</string>
  <string name="preferences_screen_sources_summary">Выбор интересующих источников данных</string>
  <string name="drawer_close">drawer_close</string>
  <string name="drawer_open">drawer_open</string>
  <string name="menu_sources_browser_item_search">Поиск</string>
  <string name="menu_sources_browser_item_settings">Настройки</string>
  <string name="menu_sources_browser_item_help">Помощь</string>
  <string name="menu_sources_browser_item_feedback">Обратная связь</string>
  <string name="preferences_dark_theme_title">Тёмная тема</string>
  <string name="preferences_load_images_title">Загружать изображения</string>
  <string name="activity_news_browser_share_text_fab_title">Поделиться текстом новости</string>
  <string name="activity_news_browser_share_image_fab_title">Поделиться картинкой</string>
  <string name="activity_news_browser_share_news_fab_title">Поделиться новостью</string>
  <string name="activity_news_browser_goto_source_fab_title">Перейти к источнику</string>
  <string name="activity_news_browser_share_url_fab_title">Поделиться ссылкой</string>
  <string name="preferences_screen_sources_at_least_one">Минимум один источник должен быть активен</string>
  <string name="preferences_font_size_title">Размер шрифта</string>
  <string name="preferences_image_cache_size_title">Размер кэша для изображений</string>
  <string name="preferences_image_cache_size_summary">Размер данных, на телефоне используемых для временного сохранения изображений (уменьшает трафик при повторном просмотре новости)</string>
  <string name="preferences_font_size_default_value">14</string>
  <string name="menu_item_search">Поиск</string>
  <string name="menu_item_dec_font">Уменьшить шрифт</string>
  <string name="menu_item_inc_font">Увеличить шрифт</string>
  <string name="activity_feedback">Обратная связь</string>
  <string name="activity_feedback_about">О программе</string>
  <string name="activity_feedback_send">Отправить</string>
  <string name="activity_feedback_from_hint">От</string>
  <string name="activity_feedback_message_hint">Сообщение</string>
  <string name="activity_feedback_send_unlock">Отправить ещё</string>
  <string name="dialog_changes_ok">Ok</string>
  <string name="dialog_changes_title">Изменения</string>
</resources>
