<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
    android:title="@string/preferences_category_update_title">

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/preferences_category_notification_title">

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/preferences_category_presentation_title">
    <CheckBoxPreference android:title="@string/preferences_dark_theme_title"/>
    <CheckBoxPreference
      android:title="@string/preferences_load_images_title"
      android:checked="true"/>
  </PreferenceCategory>

  <PreferenceScreen
    android:key="preferences_screen_sources_key"
    android:title="@string/preferences_screen_sources_title"
    android:summary="@string/preferences_screen_sources_summary">
  </PreferenceScreen>


</PreferenceScreen>