<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
    android:id="@+id/menu_item_search"
    android:checkable="false"
    android:icon="@android:drawable/ic_menu_search"
    android:title="@string/menu_item_search"
    app:showAsAction="ifRoom">
  </item>
  <item
    android:id="@+id/menu_item_dec_font"
    android:checkable="false"
    android:icon="@drawable/ic_zoom_out_white"
    android:title="@string/menu_item_dec_font"
    app:showAsAction="ifRoom">
  </item>
  <item
    android:id="@+id/menu_item_inc_font"
    android:checkable="false"
    android:icon="@drawable/ic_zoom_in_white"
    android:title="@string/menu_item_inc_font"
    app:showAsAction="ifRoom">
  </item>
  <item
    android:id="@+id/menu_item_settings"
    android:checkable="false"
    android:title="@string/menu_item_settings"
    android:icon="@android:drawable/ic_menu_preferences"
    app:showAsAction="ifRoom"/>

</menu>