<menu xmlns:tools="http://schemas.android.com/tools"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <group
    android:checkableBehavior="single"
    android:menuCategory="@+id/menu_sources_browser_group_navigation">

    <item android:title="Sources" android:id="@+id/menu_sources_browser_item_sources">
      <menu>
        <item
          android:orderInCategory="0"
          android:id="@+id/menu_sources_browser_item_search"
          android:title="@string/menu_sources_browser_item_search"
          android:layout_height="match_parent"/>
      </menu>
    </item>
  </group>

  <item tools:ignore="MenuTitle">
    <menu>
      <group android:checkableBehavior="single">
        <item
          android:orderInCategory="1"
          android:id="@+id/menu_sources_browser_item_settings"
          android:title="@string/menu_sources_browser_item_settings"
          />
        <item
          android:orderInCategory="1"
          android:id="@+id/menu_sources_browser_item_help"
          android:title="@string/menu_sources_browser_item_help"
          />

        <item
          android:orderInCategory="1"
          android:id="@+id/menu_sources_browser_item_feedback"
          android:title="@string/menu_sources_browser_item_feedback"
          />

      </group>
    </menu>
  </item>

</menu>