<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  >

  <android.support.design.widget.TextInputEditText
    android:id="@+id/activity_feedback_from"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"

    android:hint="@string/activity_feedback_from_hint"
    android:lines="1"
    android:selectAllOnFocus="true"

    />

  <android.support.design.widget.TextInputEditText
    android:id="@+id/activity_feedback_message"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/activity_feedback_from"


    android:gravity="fill"
    android:inputType="text|textMultiLine"

    android:hint="@string/activity_feedback_message_hint"
    android:scrollbars="vertical"
    android:selectAllOnFocus="true"/>
  <Button
    android:id="@+id/activity_feedback_send"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/activity_feedback_send"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"/>

</RelativeLayout>
